--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
 .whole{
     background-color: var(--theme);
 }
+.bg-theme{
+     background-color: var(--theme);
+}
 .bar{
     display: none;
 }
