--- a/style.css
+++ b/style.css
@@ -977,8 +977,8 @@ margin-bottom: 20%;
         margin-top: 2%;
         margin-left: 33%;
     }
-    .pj-wrapper button{
-        margin-left: 30%;
+    .pj-wrapper{
+        margin-left: 20%;
     }
     .id-img{
         display: none;
