--- a/style.css
+++ b/style.css
@@ -400,11 +400,15 @@ nav ul li button{
 .aboutme-p{
      color:var(--text-color);
 }
+ .id-div{
+    width: 350px;
+    margin:0 auto;
+}
 .id-img{
- width: 100%;
- height: 200px;
- margin: 0 auto;
- margin-top: 22%;     
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    margin-top: 22%; 
 }
 .page2-button{
 padding: 20px;
