--- a/style.css
+++ b/style.css
@@ -491,46 +491,12 @@ height: 200px;
   .circular-wrapper{
     margin-top: 35%;
   }
-.new-edu-wrapper{
-    display: flex;
-  }
-  .new-edu-btn{
-    margin-top: 5%;
-    background-color: white;
-    margin-left: 2%;
-    padding: 2%;
-    border-radius: 10px;
-    width: 600px;
-    border: solid 5px rgb(235, 175, 185);
-    box-shadow: 0 2px 5px rgba(9,8,9,5);
-  }
-  .new-edu-h1{
-    margin-top: 5%;
-    margin-left: 2%;
-    color: #333;
-    font-size: 29px;
-  }
-  .new-edu-ul{
-    text-align: left;
-    margin-top: 7%;
-  }
-  .new-edu-li{
-    margin-left: 10%;
-    font-size: 15px;
-  }
-  .new-edu-i{
-    margin-right: 3%;
-    font-size: 15px;
-  }
-  .new-edu-div{
-    border: solid 2px pink;
-    width: 80px;
-    color: black;
-    background-color: pink;
-    border-radius: 10px;
-    padding: 5px;
-    margin-top: 10%;
-  }
+ .id2-img{
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    margin-top: 5%; 
+}
  @media only screen and (max-width:540px){
     .whole{
         background-color: var(--theme);
@@ -809,43 +775,6 @@ height: 200px;
             margin: 0 auto;
             margin-top: 22%;
            }
-         .new-edu-wrapper{
-            display: flex;
-          }
-          .new-edu-btn{
-            margin-top: 5%;
-            background-color: white;
-            margin-left: 2%;
-            padding: 2%;
-            border-radius: 10px;
-            width: 400px;
-            border: solid 5px rgb(235, 175, 185);
-          }
-          .new-edu-h1{
-            margin-top: 5%;
-            margin-left: 2%;
-            color: #333;
-            font-size: 29px;
-          }
-          .new-edu-ul{
-            text-align: left;
-            margin-top: 5%;
-          }
-          .new-edu-li{
-            margin-left: 10%;
-          }
-          .new-edu-i{
-            margin-right: 3%;
-          }
-          .new-edu-div{
-            border: solid 2px pink;
-            width: 80px;
-            color: black;
-            background-color: pink;
-            border-radius: 10px;
-            padding: 5px;
-            margin-top: 5%;
-          }
           .wrapper-form-edu{
             padding: 10px;
             background-color: var(--fill-color);
