--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ height: 200px;
     padding: 10px;
     background-color: var(--fill-color);
     width: 400px;
-    height: 350px;
+    height: 550px;
     align-items: center;
     border-radius: 15px;
     margin:0 auto;
@@ -513,6 +513,13 @@ height: 200px;
     margin-top: 8%;
     width: 300px;
     color: var(--text-color);
+}
+.btnedu{
+    background-color:var(--theme);
+    color: var(--text-color);
+    padding: 9px;
+    border-radius: 20px;
+    border-style: dotted solid 5%;
 }
  @media only screen and (max-width:540px){
     .whole{
@@ -796,7 +803,7 @@ height: 200px;
             padding: 10px;
             background-color: var(--fill-color);
             width: 350px;
-            height: 350px;
+            height: 550px;
             align-items: center;
             border-radius: 15px;
             margin:0 auto;
