--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ height: 200px;
     width: 300px;
     margin-left: 4%;
 }
-.card-container {
+card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -541,11 +541,11 @@ height: 200px;
   }
 
   .card {
-    width: 280px;
+    width: 100px;
     border: 9px solid var(--fill-color);
-    border-radius: 10px;
+    border-radius: 50px;
     overflow: hidden;
-    background-color: #fff;
+    background-color: var(--fill-color);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
     text-align: center;
@@ -557,7 +557,7 @@ height: 200px;
 
   .card img {
     width: 100%;
-    height: 190px;
+    height: 150px;
     object-fit: cover;
   }
 
@@ -566,8 +566,8 @@ height: 200px;
   }
 
   .card h3 {
-    color: var(--fill-color);
-    margin-bottom: 10px;
+    color: var(--text-color);
+    
   }
 
   .card p {
@@ -575,6 +575,15 @@ height: 200px;
     font-size: 0.9rem;
     margin-bottom: 15px;
   }
+  .projectbtn{
+    padding: 10px;
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 22px;
+    margin-bottom: 10px;
+    width: 200px;
+  }
+
 
   @media (max-width: 768px) {
     .card-container {
