--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ nav ul li button{
 .github-btn i{
     font-size: 30px;
 }
-strength-h1{
+.strength-h1{
     color:var(--text-color);
 }
 .strength-h6{
